--- a/k8s/backend-keycloak-k8s-deploy.yaml
+++ b/k8s/backend-keycloak-k8s-deploy.yaml
@@ -1,36 +1,58 @@
-apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-service-backend
+  name: backend-keycloak-k8s
   labels:
-    app: hello-service-backend
+    app: backend-keycloak-k8s
 spec:
   selector:
     matchLabels:
-      app: hello-service-backend
-  replicas: 1 # indica al controlador que ejecute 2 pods
+      app: backend-keycloak-k8s
+  replicas: 1
   template:
     metadata:
       labels:
-        app: hello-service-backend
+        app: backend-keycloak-k8s
     spec:
       containers:
-      - name: hello-service-backend
-        image: dkeyceo/hello-k8s-service:v1
+      - name: backend-keycloak-k8s
+        image: dkeyceo/backend-keycloak-k8s:v2
         ports:
         - containerPort: 8080
+        env:
+        - name: DB_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: db-config
+              key: host
+        - name: DB_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: db-config
+              key: name
+        - name: DB_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: username
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: password
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-service-backend
+  name: backend-keycloak-k8s
   labels:
-    app: hello-service-backend
+    app: backend-keycloak-k8s
 spec:
   selector:
-    app: hello-service-backend
+    app: backend-keycloak-k8s
   ports:
-    - protocol: TCP
-      port: 80
+    - nodePort: 30007
+      protocol: TCP
+      port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: NodePort
