--- a/k8s/backend-keycloak-k8s-deploy.yaml
+++ b/k8s/backend-keycloak-k8s-deploy.yaml
@@ -19,27 +19,27 @@ spec:
         image: dkeyceo/backend-keycloak-k8s:v3
         ports:
         - containerPort: 8080
-        env:
-        - name: DB_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: db-config
-              key: host
-        - name: DB_NAME
-          valueFrom:
-            configMapKeyRef:
-              name: db-config
-              key: name
-        - name: DB_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: db-credentials
-              key: username
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-credentials
-              key: password
+#        env:
+#        - name: DB_HOST
+#          valueFrom:
+#            configMapKeyRef:
+#              name: db-config
+#              key: host
+#        - name: DB_NAME
+#          valueFrom:
+#            configMapKeyRef:
+#              name: db-config
+#              key: name
+#        - name: DB_USERNAME
+#          valueFrom:
+#            secretKeyRef:
+#              name: db-credentials
+#              key: username
+#        - name: DB_PASSWORD
+#          valueFrom:
+#            secretKeyRef:
+#              name: db-credentials
+#              key: password
 ---
 apiVersion: v1
 kind: Service
