--- a/frontend-keycloak-k8s/src/nginx/etc/conf.d/default.conf
+++ b/frontend-keycloak-k8s/src/nginx/etc/conf.d/default.conf
@@ -1,11 +1,22 @@
-server { # simple reverse-proxy
+server { 
     listen       80;
-    server_name  http://172.28.1.12:30007;
+    server_name  localhost;
     root         usr/share/nginx/html
     index index.html
 
-    # pass requests for dynamic content to rails/turbogears/zope, et al
-    location /producto {
-      proxy_pass       http://172.28.1.12:30007/products/;
+    location /foo {
+      proxy_pass     http://172.28.1.12:30007/foo/;
     }
-  }
+
+    location /user {
+      proxy_pass    http://172.28.1.12:30007/user/;
+    }
+
+    location /auth/realms/tutorial {
+      proxy_pass    http://172.28.1.12:31619/auth/realms/tutorial;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html
+    }
+}
